[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83" # Export Rust functions into JS (but does not define function themselves).
base64 = "0.13.0"

[dependencies.web-sys] # Export a set if JS functions to Rust.
version = "0.3.4"
features = ["console"] # Export JS console function to our Rust project